--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/gym-management-system/main",
+    "start:client": "nest start client-service",
+    "start:membership": "nest start membership-service",
+    "start:booking": "nest start booking-service",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
